Night Domain Ability

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -215,6 +215,8 @@
   "ability.lotmcraft.nightmare.attack": "Attack",
   "ability.lotmcraft.nightmare.teleport": "Teleport",
   "item.lotmcraft.requiem_ability": "Requiem",
+  "item.lotmcraft.spirit_commanding_ability": "Spirit Commanding",
+  "item.lotmcraft.night_domain_ability": "Night Domain",
 
   "item.lotmcraft.mighty_blow_ability": "Mighty Blow",
   "item.lotmcraft.instigation_ability": "Instigation",
