Started Ally System

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -41,6 +41,8 @@
   "item.lotmcraft.mythical_creature_tyrant_ability": "Mythical Creature Form",
   "item.lotmcraft.mythical_creature_door_ability": "Mythical Creature Form",
 
+  "item.lotmcraft.ally_ability": "Ally Designator",
+  "item.lotmcraft.ally_ability.description": "Designate an entity as your ally",
   "item.lotmcraft.cogitation_ability": "Cogitation",
   "item.lotmcraft.cogitation_ability.description": "Cogitate to replenish your Spirituality",
   "item.lotmcraft.divination_ability": "Divination",
@@ -207,6 +209,22 @@
   "ability.lotmcraft.historical_void_summoning.summon_entity": "Summon Entity",
   "ability.lotmcraft.historical_void_summoning.mark_items": "Mark the Items",
   "ability.lotmcraft.historical_void_summoning.mark_entity": "Mark an entity",
+  "ability.lotmcraft.historical_void_summoning.max_summoned": "You have already summoned the maximum number of items/entities!",
+  "ability.lotmcraft.historical_void_summoning.summoned_item": "Summoned: %s",
+  "ability.lotmcraft.historical_void_summoning.select_item": "Historical Void - Select Item",
+  "ability.lotmcraft.historical_void_summoning.item_returned": "Summoned item has returned to the void",
+  "ability.lotmcraft.historical_void_summoning.no_marked_entities": "You have no marked entities!",
+  "ability.lotmcraft.historical_void_summoning.select_entity": "Historical Void - Select Entity",
+  "ability.lotmcraft.historical_void_summoning.unknown_entity_type": "Failed to summon entity: Unknown entity type!",
+  "ability.lotmcraft.historical_void_summoning.failed_create_entity": "Failed to create entity!",
+  "ability.lotmcraft.historical_void_summoning.summoned_entity": "Summoned: %s",
+  "ability.lotmcraft.historical_void_summoning.failed_spawn_entity": "Failed to spawn entity in world!",
+  "ability.lotmcraft.historical_void_summoning.error_summoning": "Error summoning entity: %s",
+  "ability.lotmcraft.historical_void_summoning.entity_returned": "Summoned entity has returned to the void",
+  "ability.lotmcraft.historical_void_summoning.mark_items_title": "Historical Void - Mark Items",
+  "ability.lotmcraft.historical_void_summoning.mark_items_instruction": "Place items in your ender chest to mark them for summoning",
+  "ability.lotmcraft.historical_void_summoning.no_nearby_entities": "No entities nearby to mark!",
+  "ability.lotmcraft.historical_void_summoning.marked_entity": "Marked entity: %s",
   "item.lotmcraft.historical_void_hiding_ability": "Hiding in the Historical Void",
 
   "item.lotmcraft.midnight_poem_ability": "Midnight Poem",
@@ -887,6 +905,20 @@
   "lotm.sefirot.no_sefirot": "You don't have a Sefirot",
   "lotm.sefirot.sefirah_castle_already_occupied": "Sefirah Castle is occupied already",
   "lotm.sefirot.wrong_pathway": "Your Pathway does not align with the Sefirot",
+
+  "lotm.ally.no_target": "No valid target found",
+  "lotm.ally.added": "Allied with %s",
+  "lotm.ally.removed": "Removed alliance with %s",
+  "lotm.ally.cannot_ally_beyonder": "Cannot ally with beyonder entities without their permission",
+  "lotm.ally.request_sent": "Ally request sent to %s",
+  "lotm.ally.request_received": "%s wants to become your ally.",
+  "lotm.ally.request_received_short": "%s sent you an ally request",
+  "lotm.ally.click_to_accept": "[Click to Accept]",
+  "lotm.ally.request_accepted": "Ally request accepted!",
+  "lotm.ally.request_denied": "%s denied your ally request",
+  "lotm.ally.request_denied_self": "Ally request denied",
+  "lotm.ally.no_request": "No pending ally request",
+  "lotm.ally.requester_offline": "Requester is no longer online",
 
   "lotm.griefing": "Griefing Enabled",
   "lotm.description": "Description",
