--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -240,6 +240,7 @@
   "item.lotmcraft.spirit_commanding_ability": "Spirit Commanding",
   "item.lotmcraft.night_domain_ability": "Night Domain",
   "item.lotmcraft.hair_entanglement_ability": "Hair Entanglement",
+  "item.lotmcraft.horror_aura_ability": "Hair Entanglement",
 
   "item.lotmcraft.mighty_blow_ability": "Mighty Blow",
   "item.lotmcraft.instigation_ability": "Instigation",
