--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -129,42 +129,61 @@
   "item.lotmcraft.puppet_soldier_creation_ability": "Puppet Soldier Creation",
 
   "item.lotmcraft.raging_blows_ability": "Raging Blows",
+  "item.lotmcraft.raging_blows_ability.description": "A series of powerful blows that damage your opp",
   "item.lotmcraft.water_manipulation_ability": "Water Manipulation",
+  "item.lotmcraft.water_manipulation_ability.description": "The ability to manipulate water to damage your opponent",
   "ability.lotmcraft.water_manipulation.water_bolt": "Water Bolt",
   "ability.lotmcraft.water_manipulation.aqueous_light": "Aqueous Light",
   "ability.lotmcraft.water_manipulation.water_whip": "Water Whip",
   "ability.lotmcraft.water_manipulation.water_surge": "Water Surge",
   "ability.lotmcraft.water_manipulation.corrosive_rain": "Corrosive Rain",
   "item.lotmcraft.wind_manipulation_ability": "Wind Manipulation",
+  "item.lotmcraft.wind_manipulation_ability.description": "The ability to manipulate wind to damage your opponent",
   "ability.lotmcraft.wind_manipulation.wind_blade": "Wind Blade",
   "ability.lotmcraft.wind_manipulation.flight": "Flight",
   "ability.lotmcraft.wind_manipulation.boost": "Boost",
   "ability.lotmcraft.wind_manipulation.binding": "Wind Binding",
   "item.lotmcraft.lightning_ability": "Lightning",
+  "item.lotmcraft.lightning_ability.description": "Summon lightnings to strike your opponent",
   "item.lotmcraft.siren_song_ability": "Siren Song",
+  "item.lotmcraft.siren_song_ability.description": "A song that affect your opponent in various ways",
   "ability.lotmcraft.siren_song.death_melody": "Melody of Death",
   "ability.lotmcraft.siren_song.strengthening_melody": "Song of Courage",
   "ability.lotmcraft.siren_song.dazing_song": "Dazing Song",
   "item.lotmcraft.tsunami_ability": "Tsunami",
+  "item.lotmcraft.tsunami_ability.description": "Summon a tsunami to wash your opponent",
   "item.lotmcraft.earthquake_ability": "Earthquake",
+  "item.lotmcraft.earthquake_ability.description": "Cause a tremblor through the earth damage your opponent",
   "item.lotmcraft.hurricane_ability": "Hurricane",
+  "item.lotmcraft.hurricane_ability.description": "Summon a hurricane to rip through your opponent",
   "item.lotmcraft.roar_ability": "Roar",
+  "item.lotmcraft.roar_ability.description": "A deafening cry that damages your enemies",
   "item.lotmcraft.water_mastery_ability": "Water Mastery",
+  "item.lotmcraft.water_mastery_ability.description": "Total control of water",
   "ability.lotmcraft.water_mastery.water_wall": "Water Wall",
   "ability.lotmcraft.water_mastery.flooding": "Flooding",
   "item.lotmcraft.lightning_branch_ability": "Lightning Branch",
+  "item.lotmcraft.lightning_branch_ability.description": "Shoot out a lightning that spread out to form a",
   "item.lotmcraft.thunderclap_ability": "Thunderclap",
+  "item.lotmcraft.thunderclap_ability.description": "Thunderclap",
   "item.lotmcraft.torrential_downpour_ability": "Torrential Downpour",
+  "item.lotmcraft.torrential_downpour_ability.description": "Bring fouth a strong rainfall that deals damage the opponent",
   "item.lotmcraft.lightning_storm_ability": "Lightning Storm",
+  "item.lotmcraft.lightning_storm_ability.description": "Summon a lightning storm that rains down a group of lightning, destroying your opponent",
   "item.lotmcraft.calamity_creation_ability": "Calamity Creation",
+  "item.lotmcraft.calamity_creation_ability.description": "Summon a calamity creation to befall the area you stand",
   "ability.lotmcraft.calamity_creation.volcano": "Volcano",
   "ability.lotmcraft.calamity_creation.snow_storm": "Snow Storm",
   "ability.lotmcraft.calamity_creation.drought": "Drought",
   "ability.lotmcraft.calamity_creation.tornados": "Tornados",
   "item.lotmcraft.energy_transformation_ability": "Energy Transformation",
+  "item.lotmcraft.energy_transformation_ability.description": "Transform your body into pure energy",
   "item.lotmcraft.heavenly_punishment_ability": "Heavenly Punishment",
+  "item.lotmcraft.heavenly_punishment_ability.description": "Call in a divine lightning to strike down your opponent",
   "item.lotmcraft.electromagnetic_tornado_ability": "Electromagnetic Tornado",
+  "item.lotmcraft.electromagnetic_tornado_ability.description": "Summon a electromagnetic tornado",
   "item.lotmcraft.roar_of_the_thunder_god_ability": "Roar of the Thunder God",
+  "item.lotmcraft.roar_of_the_thunder_god_ability.description": "The cry of a god that destroy your enemies",
 
   "item.lotmcraft.toxic_smoke_ability": "Toxic Smoke",
   "item.lotmcraft.poisonous_flame_ability": "Poisonous Flame",
@@ -240,7 +259,7 @@
   "item.lotmcraft.spirit_commanding_ability": "Spirit Commanding",
   "item.lotmcraft.night_domain_ability": "Night Domain",
   "item.lotmcraft.hair_entanglement_ability": "Hair Entanglement",
-  "item.lotmcraft.horror_aura_ability": "Horror Aura",
+  "item.lotmcraft.horror_aura_ability": "Hair Entanglement",
 
   "item.lotmcraft.mighty_blow_ability": "Mighty Blow",
   "item.lotmcraft.instigation_ability": "Instigation",
@@ -352,35 +371,51 @@
   "item.lotmcraft.player_teleportation_ability": "Player Teleportation",
 
   "item.lotmcraft.spectating_ability": "Spectating",
+  "item.lotmcraft.spectating_ability.description": "Spectate the minds and thoughts of the people around you",
   "item.lotmcraft.telepathy_ability": "Telepathy",
+  "item.lotmcraft.telepathy_ability.description": "Read the minds of the people around you",
   "item.lotmcraft.frenzy_ability": "Frenzy",
+  "item.lotmcraft.frenzy_ability.description": "Thrown your enemies mind into distress",
   "ability.lotmcraft.frenzy.no_target": "No Target found",
   "item.lotmcraft.awe_ability": "Awe",
+  "item.lotmcraft.awe_ability.description": "Awe",
   "item.lotmcraft.placate_ability": "Placate",
   "item.lotmcraft.placate_ability.description": "Placate someone to stop them from loosing control",
   "ability.lotmcraft.placate.self": "Placate Self",
   "ability.lotmcraft.placate.others": "Placate Others",
   "item.lotmcraft.psychological_invisibility_ability": "Psychological Invisibility",
+  "item.lotmcraft.psychological_invisibility_ability.description": "Make yourself invisibility to a person's mind",
   "item.lotmcraft.battle_hypnosis_ability": "Battle Hypnosis",
+  "item.lotmcraft.battle_hypnosis_ability.description": "Control your enemies to do abnormal actions for a short period of time",
   "ability.lotmcraft.battle_hypnosis.stop": "Target is unable to move",
   "ability.lotmcraft.battle_hypnosis.weaken": "Target is distracted and weakened",
   "ability.lotmcraft.battle_hypnosis.stop_beyonder_powers": "Target cannot use Beyonder Powers",
   "item.lotmcraft.dragon_scales_ability": "Dragon Scales",
+  "item.lotmcraft.dragon_scales_ability.description": "Create dragon scales that cover your skin to protect you",
   "item.lotmcraft.sleep_inducement_ability": "Sleep Inducement",
+  "item.lotmcraft.sleep_inducement_ability.description": "Cause your enemies to fall asleep",
   "item.lotmcraft.dream_traversal_ability": "Dream Traversal",
+  "item.lotmcraft.dream_traversal_ability.description": "Travel to the a person asleep",
   "ability.lotmcraft.dream_traversal.must_be_asleep": "Target must be asleep",
   "item.lotmcraft.nightmare_spectator_ability": "Nightmare",
+  "item.lotmcraft.nightmare_spectator_ability.description": "Cause your enemies to dream a nightmare, dealing damage",
 
   "item.lotmcraft.psyche_storm_ability": "Psyche Storm",
+  "item.lotmcraft.psyche_storm_ability.description": " Create an area of effect that cause your enemies to loose control",
   "item.lotmcraft.calamity_attraction_ability": "Calamity Attraction",
+  "item.lotmcraft.calamity_attraction_ability.description": "Call upon a calamity to befall your enemies",
   "item.lotmcraft.luck_release_ability": "Luck Release",
   "item.lotmcraft.luck_release_ability.description": "Release all of your accumulated luck",
   "item.lotmcraft.misfortune_gifting_ability": "Misfortune Gifting",
+  "item.lotmcraft.misfortune_gifting_ability.description": "Give to your enemies, a misfortune onto them",
   "ability.lotmcraft.misfortune_gifting.no_target": "No Target found",
   "item.lotmcraft.misfortune_field_ability": "Misfortune Field",
+  "item.lotmcraft.misfortune_field_ability.description": "Cast an area of misfortune",
   "item.lotmcraft.blessing_ability": "Blessing",
+  "item.lotmcraft.blessing_ability.description": "Give a blessing gifted to your allies",
   "item.lotmcraft.curse_of_misfortune_ability": "Curse of Misfortune",
-
+  "item.lotmcraft.curse_of_misfortune_ability.description": "Curse your enemies with misfortune",
+  
   "item.lotmcraft.theft_ability": "Theft",
   "item.lotmcraft.mental_disruption_ability": "Mental Disruption",
   "item.lotmcraft.mental_disruption_ability.description": "Briefly stun your target",
