--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -129,7 +129,7 @@
   "item.lotmcraft.puppet_soldier_creation_ability": "Puppet Soldier Creation",
 
   "item.lotmcraft.raging_blows_ability": "Raging Blows",
-  "item.lotmcraft.raging_blows_ability.description": "A series of powerful blows that damage your opp",
+  "item.lotmcraft.raging_blows_ability.description": "A series of powerful blows that damage your enemies",
   "item.lotmcraft.water_manipulation_ability": "Water Manipulation",
   "item.lotmcraft.water_manipulation_ability.description": "The ability to manipulate water to damage your opponent",
   "ability.lotmcraft.water_manipulation.water_bolt": "Water Bolt",
