Bugfixes: AllyMaking, Cogitating and Spirit Vision van no longer be stolen, Ally Making, Cogitation and Spirit Vision will not increase digestion, Having normal mobs as marionettes as a seq 4 will no longer crash the game, As a seq 4 marionettist, all your mobs will now have at least your sequence for the multiplier calculation, you will no longer be able to burn or affected by splash potions while parasitizing, you will only become the corresponding sequence after successfully advancing, not when failing advancement, removed the placeholder stick for theft, error avatars will no longer attack the owner, sanity loss scales with sequence, so low sequence beyonders will have little effect on higher sequence ones

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -70,27 +70,27 @@
   "item.lotmcraft.notary_debuff_ability": "God says its not effective",
   "item.lotmcraft.notary_debuff_ability.description": "Weaken your enemies by calling upon your god",
   "item.lotmcraft.light_of_holiness_ability": "Light of Holiness",
-  "item.lotmcraft.light_of_holiness_ability.description":"Summon blazing hot pillar of light from the sky",
+  "item.lotmcraft.light_of_holiness_ability.description":"Summon blazing a hot pillar of light from the sky",
   "item.lotmcraft.purification_halo_ability": "Purification Halo",
-  "item.lotmcraft.purification_halo_ability.description": "Produce halo, that purifies everything",
+  "item.lotmcraft.purification_halo_ability.description": "Produce a halo, that purifies everything",
   "item.lotmcraft.unshadowed_spear_ability": "Unshadowed Spear",
   "item.lotmcraft.unshadowed_spear_ability.description": "Condense a Spear made of pure Sunlight",
   "item.lotmcraft.unshadowed_domain_ability": "Unshadowed Domain",
-  "item.lotmcraft.unshadowed_domain_ability.description": "Illuminate Light in every corner of a region, which kills everything in range",
+  "item.lotmcraft.unshadowed_domain_ability.description": "Illuminate every corner of a region, and purify all entities in range",
   "item.lotmcraft.flaring_sun_ability": "Flaring Sun",
   "item.lotmcraft.flaring_sun_ability.description": "Summon a huge ball of pure Light condensed by sacred flame",
   "item.lotmcraft.wall_of_light_ability": "Wall of Light",
-  "item.lotmcraft.wall_of_light_ability.description": "Summon Wall made of Light, that will not let enemies through it",
+  "item.lotmcraft.wall_of_light_ability.description": "Summon a Wall made of Light, that will not let enemies through it",
   "item.lotmcraft.sword_of_justice_ability": "Sword of Justice",
-  "item.lotmcraft.sword_of_justice_ability.description": "Sword made of Light will strike enemies from above",
+  "item.lotmcraft.sword_of_justice_ability.description": "A Sword made of Light will strike enemies from above",
   "item.lotmcraft.spear_of_light_ability": "Spear of Light",
-  "item.lotmcraft.spear_of_light_ability.description": "Spear made of Pure White Light will be summoned, enemies hit by it won't be able to flee",
+  "item.lotmcraft.spear_of_light_ability.description": "A Spear made of Pure White Light will be summoned, enemies hit by it won't be able to flee",
   "item.lotmcraft.solar_envoy_ability": "Solar Envoy",
   "item.lotmcraft.solar_envoy_ability.description": "Transform Yourself into a miniature Sun, setting ablaze everything in range",
   "item.lotmcraft.wings_of_light_ability": "Wings of Light",
-  "item.lotmcraft.wings_of_light_ability.description": "Summon pair of Wings, that let you fly",
+  "item.lotmcraft.wings_of_light_ability.description": "Summon a pair of Wings, that let you fly",
   "item.lotmcraft.pure_white_light_ability": "Pure White Light",
-  "item.lotmcraft.pure_white_light_ability.description": "Summon a ray from the sky made of Pure White Light, bringing Destruction onto your foes",
+  "item.lotmcraft.pure_white_light_ability.description": "Under the pure White Light, everything will be disintegrated",
   "item.lotmcraft.divine_kingdom_manifestation_ability": "Divine Kingdom Manifestation",
   "item.lotmcraft.divine_kingdom_manifestation_ability.description": "Manifest an embryonic Divine Kingdom to immediately scorch all non beyonders and weaken other Beyonders to the point of helplessness",
 
@@ -99,7 +99,7 @@
   "item.lotmcraft.provoking_ability": "Provoking",
   "item.lotmcraft.provoking_ability.description": "Provoke and weaken your enemies",
   "item.lotmcraft.pyrokinesis_ability": "Pyrokinesis",
-  "item.lotmcraft.pyrokinesis_ability.description": "Control the flames, throwing fireballs, making walls made of fire, summoning fire ravens, condensing spears made of fire and let fire engulf everything in area",
+  "item.lotmcraft.pyrokinesis_ability.description": "Control flames, throwing fireballs, making walls made of fire, summoning fire ravens, condensing spears made of fire and let fire engulf everything in area",
   "ability.lotmcraft.pyrokinesis.fireball": "Fireball",
   "ability.lotmcraft.pyrokinesis.wall_of_fire": "Wall of Fire",
   "ability.lotmcraft.pyrokinesis.fire_ravens": "Fire Ravens",
@@ -116,7 +116,7 @@
   "item.lotmcraft.steel_mastery_ability.description": "Transform your body into steel to negate the damage, or transform your flame into steel to bind your enemies with it",
   "ability.lotmcraft.steel_mastery.steel_skin": "Steel Skin",
   "ability.lotmcraft.steel_mastery.steel_chains": "Steel Chains",
-  "ability.lotmcraft.steel_mastery.no_trarget":"No Target found",
+  "ability.lotmcraft.steel_mastery.no_target": "No Target found",
   "item.lotmcraft.chain_of_command_ability": "Chain of Command",
   "item.lotmcraft.chain_of_command_ability.description": "Make Entities your subordinates. They will fight for you and you can spread your damage among them.",
   "ability.lotmcraft.chain_of_command.entity_teleport": "Moved Entity",
@@ -304,6 +304,8 @@
   "item.lotmcraft.hair_entanglement_ability.description": "Bind your enemies with your hair",
   "item.lotmcraft.horror_aura_ability": "Horror Aura",
   "item.lotmcraft.horror_aura_ability.description": "Bring Fear into your enemies, unleashing your Horror Aura. They will be heavily debuffed and lose their sanity",
+  "item.lotmcraft.surge_of_darkness_ability": "Surge of Darkness",
+  "item.lotmcraft.surge_of_darkness_ability.description": "Flood the area with Darkness, bringing Horror and Death to everything around you",
 
   "item.lotmcraft.mighty_blow_ability": "Mighty Blow",
   "item.lotmcraft.mighty_blow_ability.description": "Strike your target with one single powerful blow",
