Added new Ability textures and classes

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -282,6 +282,14 @@
   "ability.lotmcraft.historical_void_summoning.marked_entity": "Marked entity: %s",
   "item.lotmcraft.historical_void_hiding_ability": "Hiding in the Historical Void",
   "item.lotmcraft.historical_void_hiding_ability.description": "Hide in Historical Void being invisible, but unable to move, upon leaving it, you will be in exact same spot where you activated it",
+  "item.lotmcraft.miracle_creation_ability": "Miracle Creation",
+  "item.lotmcraft.miracle_creation_ability.description": "Manifest a multitude of miracles",
+  "ability.lotmcraft.miracle_creation.summon_structure": "Summon Structure",
+  "ability.lotmcraft.miracle_creation.calamity_creation": "Calamity Creation",
+  "ability.lotmcraft.miracle_creation.area_manipulation": "Area Manipulation",
+  "ability.lotmcraft.miracle_creation.teleportation": "Teleportation",
+  "ability.lotmcraft.miracle_creation.target_manipulation": "Target Manipulation",
+
 
   "item.lotmcraft.midnight_poem_ability": "Midnight Poem",
   "item.lotmcraft.midnight_poem_ability.description": "Recite a poem related to night to either put them to sleep or attack",
@@ -393,6 +401,18 @@
   "ability.lotmcraft.nature_spells.natures_wrath": "Natures Wrath",
   "ability.lotmcraft.nature_spells.natures_wrath.no_target": "No target found",
   "ability.lotmcraft.nature_spells.natures_wrath.already_affected": "The target has already drawn the Wrath of Nature",
+  "item.lotmcraft.life_aura_ability": "Life Aura",
+  "item.lotmcraft.life_aura_ability.description": "Emanate an Aura of Life nourishing plant growth and healing nearby entities",
+  "item.lotmcraft.mutation_creation_ability": "Mutation Creation",
+  "item.lotmcraft.mutation_creation_ability.description": "Randomly mutate your target, damaging them and draining their sanity",
+  "item.lotmcraft.golem_creation_ability": "Golem Creation",
+  "item.lotmcraft.golem_creation_ability.description": "Create Golems",
+  "item.lotmcraft.life_deprivation_ability": "Life Deprivation",
+  "item.lotmcraft.life_deprivation_ability.description": "Drain life from your targets or your surroundings",
+  "ability.lotmcraft.life_deprivation.target": "Single Target",
+  "ability.lotmcraft.life_deprivation.area": "Drain Area",
+  "item.lotmcraft.maternal_embrace_ability": "Maternal Embrace",
+  "item.lotmcraft.maternal_embrace_ability.description": "Seal your target in a coffin",
 
   "item.lotmcraft.door_opening_ability": "Door Opening",
   "item.lotmcraft.door_opening_ability.description": "Use on solid walls to pass through them",
@@ -484,6 +504,15 @@
   "ability.lotmcraft.dream_traversal.must_be_asleep": "Target must be asleep",
   "item.lotmcraft.nightmare_spectator_ability": "Nightmare",
   "item.lotmcraft.nightmare_spectator_ability.description": "Cause your enemies to dream a nightmare, dealing damage",
+  "item.lotmcraft.manipulation_ability": "Manipulation",
+  "item.lotmcraft.manipulation_ability.description": "Control the movement of your target",
+  "item.lotmcraft.mental_plague_ability": "Mental Plague",
+  "item.lotmcraft.mental_plague.description": "Spread a mental plague that will slowly drive all entities to insanity",
+  "item.lotmcraft.mind_invasion_ability": "Mind Invasion",
+  "item.lotmcraft.mind_invasion.description": "Invade your opponents Mind Island. The more you destroy the more sanity they will lose",
+  "item.lotmcraft.identity_avatar_ability": "Identity Avatar",
+  "item.lotmcraft.identity_avatar_ability.description": "Split of Virtual Persona and weave it into an Avatar",
+
 
   "item.lotmcraft.psyche_storm_ability": "Psyche Storm",
   "item.lotmcraft.psyche_storm_ability.description": " Create an area of effect that cause your enemies to loose control",
