Continued Miracle Creation

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -294,6 +294,14 @@
   "ability.lotmcraft.miracle_creation.miracle.summon_pillager_outpost": "Summon Pillager Outpost",
   "ability.lotmcraft.miracle_creation.miracle.summon_desert_temple": "Summon Desert Temple",
   "ability.lotmcraft.miracle_creation.miracle.summon_evernight_church": "Summon Evernight Church",
+  "ability.lotmcraft.miracle_creation.miracle.summon_meteor": "Summon Meteor",
+  "ability.lotmcraft.miracle_creation.miracle.summon_tornados": "Summon Tornados",
+  "ability.lotmcraft.miracle_creation.miracle.summon_volcano": "Summon Volcano",
+  "ability.lotmcraft.miracle_creation.miracle.reverse_gravity": "Reverse Gravity",
+  "ability.lotmcraft.miracle_creation.miracle.make_ground_hot": "Scorch the Ground",
+  "ability.lotmcraft.miracle_creation.miracle.slow_time": "Slow Time",
+  "ability.lotmcraft.miracle_creation.miracle.darkness": "Summon Darkness",
+  "ability.lotmcraft.miracle_creation.miracle.forbid_godhood": "Forbid Godhood",
 
 
   "item.lotmcraft.midnight_poem_ability": "Midnight Poem",
